2006-10-02 Harish Krishnaswamy <kharish@novell.com>

	* NEWS, configure.in: Connector 2.8.1 release.

2006-09-04  Veerapuram Varadhan  <vvaradhan@novell.com>

	* NEWS, configure.in: Connector 2.8.0 release.

2006-08-22  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-store.c: Including camel-exchange-summary.h.
	Fixes build issue with -Werror-implicit-function-declaration flag.
	Patch submitted by "Matthew Barnes  ", Fixes #349949. 

2006-08-21  Srinivasa Ragavan <sragavan@novell.com>

	* NEWS, configure.in: Connector 2.7.92 release.

2006-08-14  Sanlig Badral  <badral@openmn.org>

        * configure.in: Added mn (Mongolian) to ALL_LINGUAS.

2006-08-07  Srinivasa Ragavan <sragavan@novell.com>

	* configure.in: Bumped version to 2.7.91
	* NEWS: Updated changes

2006-08-07  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-stub-marshal.c (do_read): Whenever timeout happens,
	just keep reading.  Fixes #344196
	
2006-08-07  Sushma Rai  <rsushma@novell.com>

	* camel/camel-stub.c (connect_to_storage): Handling the error when the
	socket file path has changed and displaying proper error message.
	Fixes #274321

2006-07-31  Sushma Rai  <rsushma@novell.com>

	* camel/camel-stub-marshal.c (do_read): Come out of the loop on
	failure. Fixes the hang.
	(marshal_read): Resetting the byte array size when read fails.
	Patch submitted by "Jeffrey Stedfast <fejj@novell.com>" and
	"Arunprakash <twizst@gmail.com>". Fixes #344196 and Novell
	bugzilla bug https://bugzilla.novell.com/show_bug.cgi?id=179545.

2006-07-27  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes Novell bugzilla bug #170058
	* calendar/e-cal-backend-exchange-calendar.c: 
	(discard_alarm): Check if the icalcomponent is set
	in ECalComponent before removing the alarms.

2006-07-24  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.7.90
	* NEWS : Updated

2006-07-24  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (e_contact_from_props) 